[gd_scene load_steps=3 format=3 uid="uid://n12ju4wdgeby"]

[ext_resource type="Script" uid="uid://bfhfqf6l3cpjk" path="res://scripts/MainMenu.gd" id="1_c1eu8"]
[ext_resource type="FontFile" uid="uid://bqeasmhefa2v6" path="res://assets/fonts/Trajan Pro Regular.ttf" id="4_nory3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -258.0
offset_right = 1704.0
offset_bottom = 1290.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c1eu8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 274.0
offset_right = 2880.0
offset_bottom = 2262.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 564.0
offset_top = 590.0
offset_right = 2253.0
offset_bottom = 716.0
theme_override_fonts/font = ExtResource("4_nory3")
theme_override_font_sizes/font_size = 125
text = "Surviving the Darkness"

[node name="GameOptions" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1142.0
offset_top = 1046.0
offset_right = 1926.0
offset_bottom = 1182.0

[node name="PlayButton" type="Button" parent="GameOptions"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="GameOptions"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="GameOptions"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="GameOptions"]
layout_mode = 2
text = "Quit"
